--- a/package.json
+++ b/package.json
@@ -9,21 +9,28 @@
     "@testing-library/dom": "^8.17.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
+    "base-64": "^1.0.0",
     "bootstrap": "^5.2.0",
     "gh-pages": "^4.0.0",
+    "jsonwebtoken": "^8.5.1",
     "node-sass": "^7.0.1",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
+    "react-bootstrap": "^2.5.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "17.0.2",
+    "react-if": "^4.1.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.49.9",
+    "superagent": "^8.0.0",
     "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts test --env=jsdom",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
     "deploy": "gh-pages -d build"
   },
   "browserslist": {
