--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/dom": "^8.17.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
+    "axios": "^0.27.2",
     "base-64": "^1.0.0",
     "bootstrap": "^5.2.0",
     "gh-pages": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "node-sass": "^7.0.1",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
@@ -20,6 +22,7 @@
     "react-cookies": "^0.1.1",
     "react-dom": "17.0.2",
     "react-if": "^4.1.4",
+    "react-paginate": "^8.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.49.9",
