--- a/package.json
+++ b/package.json
@@ -6,28 +6,24 @@
   "main": "src/index.js",
   "dependencies": {
     "@blueprintjs/core": "^4.9.0",
-    "@testing-library/dom": "^8.17.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "base-64": "^1.0.0",
-    "bootstrap": "^5.2.0",
-    "gh-pages": "^4.0.0",
-    "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "node-sass": "^7.0.1",
-    "normalize.css": "^8.0.1",
-    "react": "17.0.2",
-    "react-bootstrap": "^2.5.0",
+    "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-cookies": "^0.1.1",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.1.0",
     "react-if": "^4.1.4",
     "react-paginate": "^8.1.3",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "sass": "^1.49.9",
-    "superagent": "^8.0.0",
-    "uuid": "^8.3.2"
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
+    "uuid": "^8.3.2",
+    "web-vitals": "^2.1.4"
+  
   },
   "scripts": {
     "start": "react-scripts start",
